--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "ejs": "^2.3.4",
     "express": "^4.13.3",
     "faker": "^3.0.1",
     "jsonwebtoken": "^5.4.1",
